--- a/main.html
+++ b/main.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Navbar and Audio Section</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <!-- Part 1: Navbar -->
+  <nav>
+  <ul>
+    <li><a href="https://www.google.com">Home</a></li>
+    <li><a href="https://www.wikipedia.org">About</a></li>
+    <li><a href="https://www.github.com">Contact</a></li>
+  </ul>
+</nav>
+
+  <!-- Part 2: Audio Section -->
+    <section>
+    <h1>3 random audios</h1>
+
+    <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
+    <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+    <audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
+  </section>
+
 
 </body>
-
 </html>
